welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: value vuBiscuit
		while(vuBiscuit()==0)
                      ^Program:9: error: type mismatch;
 found   : Int
 required: Boolean
	return i
               ^